--- a/index.html
+++ b/index.html
@@ -6,5 +6,97 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Dashboard</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="wrapper">
+        <h1>Social Media Dashboard</h1>
+        <p>Total Followers: 23,004</p>
+      </div>
+    </header>
+    <section class="top-cards">
+      <div class="wrapper">
+        <div class="grid">
+          <article class="card facebook">
+            <p class="card-title">
+              <img
+                width="25"
+                src="https://img.icons8.com/office/40/000000/facebook.png"
+              />
+              @HumbertoMLL
+            </p>
+            <p class="card-followers">
+              <span class="card-followers-number">100</span>
+              <span class="card-followers-title">Followers</span>
+            </p>
+            <p class="card-today">
+              <img
+                src="https://img.icons8.com/plasticine/100/000000/left-up2.png"
+              />
+              12 today
+            </p>
+          </article>
+          <article class="card twitter">
+            <p class="card-title">
+              <img
+                width="25"
+                src="https://img.icons8.com/fluent/48/000000/twitter.png"
+              />
+              @HumbertMLL
+            </p>
+            <p class="card-followers">
+              <span class="card-followers-number">98</span>
+              <span class="card-followers-title">Followers</span>
+            </p>
+            <p class="card-today">
+              <img
+                src="https://img.icons8.com/plasticine/100/000000/left-up2.png"
+              />
+              12 today
+            </p>
+          </article>
+          <article class="card instagram">
+            <p class="card-title">
+              <img
+                width="25"
+                src="https://img.icons8.com/fluent/48/000000/instagram-new.png"
+              />
+              @HumbertoMLL
+            </p>
+            <p class="card-followers">
+              <span class="card-followers-number">360</span>
+              <span class="card-followers-title">Followers</span>
+            </p>
+            <p class="card-today">
+              <img
+                src="https://img.icons8.com/plasticine/100/000000/left-up2.png"
+              />
+              12 today
+            </p>
+          </article>
+          <article class="card tiktok">
+            <p class="card-title">
+              <img
+                width="25"
+                src="https://img.icons8.com/color/48/000000/tiktok.png"
+              />
+              @HumbertoMLL
+            </p>
+            <p class="card-followers">
+              <span class="card-followers-number">19</span>
+              <span class="card-followers-title">Followers</span>
+            </p>
+            <p class="card-today">
+              <img
+                src="https://img.icons8.com/plasticine/100/000000/left-up2.png"
+              />
+              12 today
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
+    <section class="overview">
+      <div class="wrapper"></div>
+    </section>
+  </body>
 </html>
