--- a/index.html
+++ b/index.html
@@ -96,7 +96,194 @@
       </div>
     </section>
     <section class="overview">
-      <div class="wrapper"></div>
+      <div class="wrapper">
+        <div class="grid">
+          <div class="card-small">
+            <p class="card-small-views">Page Views</p>
+            <p class="card-small-icon">
+              <img
+                width="25"
+                src="https://img.icons8.com/office/40/000000/facebook.png"
+                alt=""
+              />
+            </p>
+            <p class="card-small-number">
+              87
+            </p>
+            <p class="card-small-percentage">
+              <span>
+                <img
+                  width="16"
+                  src="https://img.icons8.com/plasticine/100/000000/left-up2.png"
+                  alt=""
+                />
+              </span>
+              2%
+            </p>
+          </div>
+          <div class="card-small">
+            <p class="card-small-views">Page Views</p>
+            <p class="card-small-icon">
+              <img
+                width="25"
+                src="https://img.icons8.com/office/40/000000/facebook.png"
+                alt=""
+              />
+            </p>
+            <p class="card-small-number">
+              87
+            </p>
+            <p class="card-small-percentage">
+              <span>
+                <img
+                  width="16"
+                  src="https://img.icons8.com/plasticine/100/000000/left-up2.png"
+                  alt=""
+                />
+              </span>
+              2%
+            </p>
+          </div>
+          <div class="card-small">
+            <p class="card-small-views">Page Views</p>
+            <p class="card-small-icon">
+              <img
+                width="25"
+                src="https://img.icons8.com/office/40/000000/facebook.png"
+                alt=""
+              />
+            </p>
+            <p class="card-small-number">
+              87
+            </p>
+            <p class="card-small-percentage">
+              <span>
+                <img
+                  width="16"
+                  src="https://img.icons8.com/plasticine/100/000000/left-up2.png"
+                  alt=""
+                />
+              </span>
+              2%
+            </p>
+          </div>
+          <div class="card-small">
+            <p class="card-small-views">Page Views</p>
+            <p class="card-small-icon">
+              <img
+                width="25"
+                src="https://img.icons8.com/office/40/000000/facebook.png"
+                alt=""
+              />
+            </p>
+            <p class="card-small-number">
+              87
+            </p>
+            <p class="card-small-percentage">
+              <span>
+                <img
+                  width="16"
+                  src="https://img.icons8.com/plasticine/100/000000/left-up2.png"
+                  alt=""
+                />
+              </span>
+              2%
+            </p>
+          </div>
+          <div class="card-small">
+            <p class="card-small-views">Page Views</p>
+            <p class="card-small-icon">
+              <img
+                width="25"
+                src="https://img.icons8.com/office/40/000000/facebook.png"
+                alt=""
+              />
+            </p>
+            <p class="card-small-number">
+              87
+            </p>
+            <p class="card-small-percentage">
+              <span>
+                <img
+                  width="16"
+                  src="https://img.icons8.com/plasticine/100/000000/left-up2.png"
+                  alt=""
+                />
+              </span>
+              2%
+            </p>
+          </div>
+          <div class="card-small">
+            <p class="card-small-views">Page Views</p>
+            <p class="card-small-icon">
+              <img
+                width="25"
+                src="https://img.icons8.com/office/40/000000/facebook.png"
+                alt=""
+              />
+            </p>
+            <p class="card-small-number">
+              87
+            </p>
+            <p class="card-small-percentage">
+              <span>
+                <img
+                  width="16"
+                  src="https://img.icons8.com/plasticine/100/000000/left-up2.png"
+                  alt=""
+                />
+              </span>
+              2%
+            </p>
+          </div>
+          <div class="card-small">
+            <p class="card-small-views">Page Views</p>
+            <p class="card-small-icon">
+              <img
+                width="25"
+                src="https://img.icons8.com/office/40/000000/facebook.png"
+                alt=""
+              />
+            </p>
+            <p class="card-small-number">
+              87
+            </p>
+            <p class="card-small-percentage">
+              <span>
+                <img
+                  width="16"
+                  src="https://img.icons8.com/plasticine/100/000000/left-up2.png"
+                  alt=""
+                />
+              </span>
+              2%
+            </p>
+          </div>
+          <div class="card-small">
+            <p class="card-small-views">Page Views</p>
+            <p class="card-small-icon">
+              <img
+                width="25"
+                src="https://img.icons8.com/office/40/000000/facebook.png"
+                alt=""
+              />
+            </p>
+            <p class="card-small-number">
+              87
+            </p>
+            <p class="card-small-percentage">
+              <span>
+                <img
+                  width="16"
+                  src="https://img.icons8.com/plasticine/100/000000/left-up2.png"
+                  alt=""
+                />
+              </span>
+              2%
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
