--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     </section>
     <section class="overview">
       <div class="wrapper">
+        <h2>Overview - Today</h2>
         <div class="grid">
           <div class="card-small">
             <p class="card-small-views">Page Views</p>
@@ -131,7 +132,76 @@
               />
             </p>
             <p class="card-small-number">
-              87
+              300K
+            </p>
+            <p class="card-small-percentage">
+              <span>
+                <img
+                  width="16"
+                  src="https://img.icons8.com/plasticine/100/000000/left-up2.png"
+                  alt=""
+                />
+              </span>
+              2%
+            </p>
+          </div>
+          <div class="card-small">
+            <p class="card-small-views">Page Views</p>
+            <p class="card-small-icon">
+              <img
+                width="25"
+                src="https://img.icons8.com/office/40/000000/facebook.png"
+                alt=""
+              />
+            </p>
+            <p class="card-small-number">
+              37K
+            </p>
+            <p class="card-small-percentage">
+              <span>
+                <img
+                  width="16"
+                  src="https://img.icons8.com/plasticine/100/000000/left-up2.png"
+                  alt=""
+                />
+              </span>
+              2%
+            </p>
+          </div>
+          <div class="card-small">
+            <p class="card-small-views">Page Views</p>
+            <p class="card-small-icon">
+              <img
+                width="25"
+                src="https://img.icons8.com/office/40/000000/facebook.png"
+                alt=""
+              />
+            </p>
+            <p class="card-small-number">
+              2K
+            </p>
+            <p class="card-small-percentage">
+              <span>
+                <img
+                  width="16"
+                  src="https://img.icons8.com/plasticine/100/000000/left-up2.png"
+                  alt=""
+                />
+              </span>
+              2%
+            </p>
+          </div>
+          <div class="card-small">
+            <p class="card-small-views">Page Views</p>
+            <p class="card-small-icon">
+              <img
+                width="25"
+                src="https://img.icons8.com/office/40/000000/facebook.png"
+                alt=""
+              />
+            </p>
+            <p class="card-small-number">
+              12000
             </p>
             <p class="card-small-percentage">
               <span>
@@ -177,76 +247,7 @@
               />
             </p>
             <p class="card-small-number">
-              87
-            </p>
-            <p class="card-small-percentage">
-              <span>
-                <img
-                  width="16"
-                  src="https://img.icons8.com/plasticine/100/000000/left-up2.png"
-                  alt=""
-                />
-              </span>
-              2%
-            </p>
-          </div>
-          <div class="card-small">
-            <p class="card-small-views">Page Views</p>
-            <p class="card-small-icon">
-              <img
-                width="25"
-                src="https://img.icons8.com/office/40/000000/facebook.png"
-                alt=""
-              />
-            </p>
-            <p class="card-small-number">
-              87
-            </p>
-            <p class="card-small-percentage">
-              <span>
-                <img
-                  width="16"
-                  src="https://img.icons8.com/plasticine/100/000000/left-up2.png"
-                  alt=""
-                />
-              </span>
-              2%
-            </p>
-          </div>
-          <div class="card-small">
-            <p class="card-small-views">Page Views</p>
-            <p class="card-small-icon">
-              <img
-                width="25"
-                src="https://img.icons8.com/office/40/000000/facebook.png"
-                alt=""
-              />
-            </p>
-            <p class="card-small-number">
-              87
-            </p>
-            <p class="card-small-percentage">
-              <span>
-                <img
-                  width="16"
-                  src="https://img.icons8.com/plasticine/100/000000/left-up2.png"
-                  alt=""
-                />
-              </span>
-              2%
-            </p>
-          </div>
-          <div class="card-small">
-            <p class="card-small-views">Page Views</p>
-            <p class="card-small-icon">
-              <img
-                width="25"
-                src="https://img.icons8.com/office/40/000000/facebook.png"
-                alt=""
-              />
-            </p>
-            <p class="card-small-number">
-              87
+              90k
             </p>
             <p class="card-small-percentage">
               <span>
