--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <header class="header">
       <div class="wrapper">
         <h1>Social Media Dashboard</h1>
-        <p>Total Followers: 23,004</p>
+        <p class="header-title">Total Followers: 23,004</p>
+        <div class="dark-mode">
+          <p class="dark-mode-title">Dark Mode</p>
+          <input type="checkbox" class="checkbox" id="checkbox" />
+          <label for="checkbox" class="switch"> </label>
+        </div>
       </div>
     </header>
     <section class="top-cards">
